--- a/css/style-dist.css
+++ b/css/style-dist.css
@@ -199,7 +199,7 @@ body {
 .all-page .box-about {
   display: flex;
   justify-content: space-between;
-  align-items: stretch;
+  align-items: flex-start;
 }
 .all-page .box-about__h2 {
   margin-top: 12px;
@@ -209,6 +209,7 @@ body {
 .all-page .box-about__front {
   width: 280px;
   margin: 0 auto;
+  height: 100%;
   margin-bottom: 60px;
   border-radius: 2px;
 }
@@ -763,7 +764,7 @@ body {
 .all-page[data-theme=dark] .box-about {
   display: flex;
   justify-content: space-between;
-  align-items: stretch;
+  align-items: flex-start;
 }
 .all-page[data-theme=dark] .box-about__h2 {
   margin-top: 12px;
@@ -773,6 +774,7 @@ body {
 .all-page[data-theme=dark] .box-about__front {
   width: 280px;
   margin: 0 auto;
+  height: 100%;
   margin-bottom: 60px;
   border-radius: 2px;
 }
